# sound-shift

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy-website.yml  release.yml
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/scripts/: generate-icons.mjs
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs  state.rs
desktop/src/components/: ErrorBoundary.tsx
desktop/src/components/devices/: DeviceRow.tsx
desktop/src/components/groups/: GroupCard.tsx  GroupModal.tsx
desktop/src/components/layout/: Layout.tsx  Sidebar.tsx
desktop/src/components/shortcuts/: ShortcutRecorder.tsx
desktop/src/mocks/: demoData.ts
desktop/src/pages/: DevicesPage.tsx  GroupsPage.tsx  SettingsPage.tsx
desktop/src/types/: index.ts
website/: .firebaserc  index.html  package-lock.json  package.json  tailwind.config.js
website/src/: App.tsx  index.css
website/src/components/: Download.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  Screenshots.tsx
